--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "devDependencies": {
     "coffee-script": ">= 1.3.1",
-    "jsmin": "*"
+    "jsmin": "*",
+    "servedir": "*"
+  },
+  "scripts": {
+    "start": "servedir"
   }
 }
